Wed May 18 03:08:48 UTC 2011  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/utils/unite/setaf:
        * cuts/utils/unite/setaf/Cpp.h:
        * cuts/utils/unite/setaf/Cpp.cpp:
        * cuts/utils/unite/setaf/Setaf.cpp:
        * cuts/utils/unite/setaf/Setaf_Code_Generator.h:
        * cuts/utils/unite/setaf/Setaf_Code_Generator.inl:
        * cuts/utils/unite/setaf/Setaf_Code_Generator.cpp:
        * cuts/utils/unite/setaf/Setaf_Format.h:
        * cuts/utils/unite/setaf/Setaf_Format.inl:
        * cuts/utils/unite/setaf/Setaf_Format.cpp:
        * cuts/utils/unite/setaf/Setaf_Lang_Compiler.h:
        * cuts/utils/unite/setaf/Setaf_Lang_Compiler.cpp:
        * cuts/utils/unite/setaf/Setaf_Utils.h:
        * cuts/utils/unite/setaf/Setaf_app.h:
        * cuts/utils/unite/setaf/Setaf_app.cpp:
        * cuts/utils/unite/setaf/setaf.mpc:

          Added the SETAF code generation code

        * examples/cuts/utils/unite/adapter/ActiveMQ/Activemq.datagraph:
        * examples/cuts/utils/unite/adapter/ActiveMQ/Activemq.unite:
        * examples/cuts/utils/unite/adapter/ActiveMQ/Activemq_Adapter.uas:
        * examples/cuts/utils/unite/adapter/Ant/Ant.datagraph:
        * examples/cuts/utils/unite/adapter/Ant/Ant.unite:
        * examples/cuts/utils/unite/adapter/Ant/Ant_Adapter.uas:
        * examples/cuts/utils/unite/adapter/DAnCE/DAnCE.datagraph:
        * examples/cuts/utils/unite/adapter/DAnCE/DAnCE.unite:
        * examples/cuts/utils/unite/adapter/DAnCE/DAnCE_Adapter.uas:
        * examples/cuts/utils/unite/adapter/Tomcat/Tomcat.datagraph:
        * examples/cuts/utils/unite/adapter/Tomcat/Tomcat.unite:
        * examples/cuts/utils/unite/adapter/Tomcat/Tomcat_Adapter.uas:

          Updated the examples related to SETAF.

Sun May 15 23:56:57 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/rtidds/BE_RTIDDS.mpc: